<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/background_app"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/task_dialog_task_title_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/etTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/task_dialog_task_description_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <CalendarView
        android:id="@+id/cvTaskDueDate"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <RadioGroup
        android:id="@+id/rgPriorities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rbP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/task_high_priority"
            android:textColor="@color/gray" />

        <RadioButton
            android:id="@+id/rbP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_mid_priority"
            android:textColor="@color/gray" />

        <RadioButton
            android:id="@+id/rbP3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_low_priority"
            android:textColor="@color/gray" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_dialog_task_add_hint"
        android:backgroundTint="@color/button"/>


</LinearLayout>