<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/background_app"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/task_dialog_task_title_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_dialog_color_selector_title"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp" />

    <!-- Controles para el color rojo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="Rojo:"
            android:textSize="17sp"
            android:layout_gravity="center_vertical" />

        <SeekBar
            android:id="@+id/seekbar_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255" />

        <TextView
            android:id="@+id/value_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="17sp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <!-- Controles para el color verde -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="Verde:"
            android:textSize="17sp"
            android:layout_gravity="center_vertical" />

        <SeekBar
            android:id="@+id/seekbar_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255" />

        <TextView
            android:id="@+id/value_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="17sp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <!-- Controles para el color azul -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="Azul:"
            android:textSize="17sp"
            android:layout_gravity="center_vertical" />

        <SeekBar
            android:id="@+id/seekbar_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255" />

        <TextView
            android:id="@+id/value_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="17sp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <!-- Vista previa del color generado -->
    <View
        android:id="@+id/color_preview"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:layout_gravity="center"/>


    <Button
        android:id="@+id/btnAddProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_dialog_project_add_hint"
        android:backgroundTint="@color/button"/>


</LinearLayout>