<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_logo_checkit"
        android:tint="@color/logo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_form_bg"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <TextView
            android:id="@+id/tvSaludo_ln1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_saludo_ln1"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvSaludo_ln2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/button"
            android:textSize="23sp"/>

        <TextView
            android:id="@+id/tvSaludo_ln2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_saludo_ln2"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tvSaludo_ln1"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:textSize="19sp"
            android:textColor="@color/button"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSaludo_ln2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textEmailAddress"
            android:hint="Email"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="Password"
            android:textSize="20sp"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_go_to_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:text="Login"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:background="@drawable/btn_primary_bg"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preguntaRegistro"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tv_go_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="16dp"
        android:text="Regístrate"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:background="@drawable/btn_secondary_bg"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSugerenciaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginSugerencia"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_go_to_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toBottomOf="@+id/tvSugerenciaLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFacebook"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_google"
        android:background="@drawable/btn_sn_bg"
        android:scaleType="centerInside"
        android:layout_marginLeft="60dp"
        android:padding="20dp"
        android:tint="@color/white"
        />

    <ImageButton
        android:id="@+id/btnFacebook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toBottomOf="@+id/tvSugerenciaLogin"
        app:layout_constraintStart_toEndOf="@+id/btnGoogle"
        app:layout_constraintEnd_toStartOf="@id/btnX"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_facebook"
        android:background="@drawable/btn_sn_bg"
        android:scaleType="centerInside"
        android:layout_marginHorizontal="10dp"
        android:padding="20dp"
        android:tint="@color/white"
        />

    <ImageButton
        android:id="@+id/btnX"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toBottomOf="@+id/tvSugerenciaLogin"
        app:layout_constraintStart_toEndOf="@+id/btnFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_x"
        android:background="@drawable/btn_sn_bg"
        android:scaleType="centerInside"
        android:layout_marginRight="60dp"
        android:padding="20dp"
        android:tint="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

